<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yamba</string>
    <string name="action_settings">Settings</string>

    <string name="title_status">Twitter Status Update</string>

    <string name="hint_status">What\'s going on in 140 characters?</string>
    <string name="button_tweet">Tweet</string>

    <string name="tweet">Tweet</string>
    <string name="refresh">Refresh</string>
    <string name="purge">Purge</string>
</resources>