<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".StatusActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tweet"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always|withText"
        android:title="@string/tweet"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="always"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/action_purge"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/purge"/>

</menu>
