<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StatusActivity">

    <TextView
        android:id="@+id/titleStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:text="@string/title_status" />

    <EditText
        android:id="@+id/editStatus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_status"
        android:ems="10"
        android:hint="@string/hint_status"
        android:layout_below="@id/titleStatus"
        android:inputType="textMultiLine">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editStatus"
        android:text="140"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <Button
        android:id="@+id/buttonTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_tweet"
        android:textSize="20sp"
        android:layout_below="@id/textCount"
        android:onClick="sendTweet"/>

</RelativeLayout>
